v116
    -Fix zlib, mdf, exe parser.
    -Update wav parser.
    -Add mscf (MS Cab) parser.
    -Change Analyzer.
v115
    -Add tar, png, bzip2, szdd parser.
    -Tiff parser:
     Detect more jpg data.
     Sort image data offsets in to ascending order.
     Enable some types and tags.
     Fix MM mode detection.
     If tag data pos is past current pos then ignore image.
     Uncompressed data with more then 32bits are reported as DEFAULT.
    -Fixes for szdd, bmp, gif, tiff, jpeg, uue, cd, mdf, bzip2 parser.
    -Update text parser.
    -In parser add last block flag.
    -Add parser info string (width, etc).
    -Add parser/codec progress status.
    -Change Analyzer
v114
    -Add pdf lzw, gif, dBase, pdf bitmap, aiff, ascii85,
     base64 (stream), base64 (multiline), mod, sgi/rgb,
     tga, cd, mdf, uue, tiff parser.
    -Some cleanup
    -Change Analyzer and Codec so that parent type is passed on in recursion.
    -Move LZSS to separate header
    -Disable zlib parser if parent type is ZLIB
    -Enable pdf bitmap parser only if parent type is ZLIB
v113
    -Update build script
    -Add default, bmp, text (very agressive), DEC Alpha, mrb (.hlp),
     exe, zlib, nes rom, jpeg, wav, pnm and MS-Zip (.cab) parsers.
    -Add analyzer (detect replacement)
    -Heavy cleanup of code
    -Enable MRBR4, TXTUTF8 and BIGTEXT filters
v112
    -More refactoring of source code
v111
    -Refactored source code
    -Add build script for Windows
v110
    -In BZip2 recompression add a new parameter to BZ2_bzCompressInit API.
     In BZip2 v1.0.3 maxLen was changed from 20 to 17. Test 20 if 17 fails.
     This is needed for older archives or recompression fails.
    -Revert minimum dictionary frequency to 19.
    -Some cleanup.
    -Change tempFile memory from 16MB to 64MB
    -Add english.dict from fxcm
v109
    -If minimum dictionary frequency=0 then use only static dictionary (-e0,dictionary)
    -Add verbose levels 0-3.
    -Remove some text colors.
v108
    -Merge VLI fix.